# gnome-pocket

./: .gitignore  Makefile.am  README  TODO  gnome-pocket-item.c  gnome-pocket-item.h  gnome-pocket.c  gnome-pocket.doap  gnome-pocket.h  gnome-pocket.m4  test.c
gnome-pocket/: Makefile  gnome-pocket-client.c  gnome-pocket-client.h  gnome-pocket-item.c  gnome-pocket-item.h  gnome-pocket.c  gnome-pocket.h
